--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dependencies/plog"]
 	path = dependencies/plog
-	url = https://github.com/SergiusTheBest/plog.git
+	url = git@github.com:SergiusTheBest/plog.git
